[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Cort Spellman <spellman.cort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# Because we don't specify a name field, Cargo defaults to package.name, which is "zero2prod" and what we want.
path = "src/lib.rs"

[[bin]]
# Double square brackets indicate an array in TOML syntax. We can only have one library in a project but we can have
# multiple binaries.
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "3.1.0"
actix-rt = "1.1.1"
config = "0.10.1"
serde = { version = "1.0.123", features = ["derive"]}

[dependencies.sqlx]
version = "0.4.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.10.10"
tokio = "0.2.22"